# legal_document_review

legal_document _review/: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  test_openenv.py
legal_document _review/data/: contracts.py
legal_document _review/env/: legal_env.py  models.py
legal_document _review/graders/: clause_classifier.py  contract_redliner.py  risk_spotter.py
legal_document _review/scripts/: baseline_agent.py
legal_document _review/scripts/eval/: run_eval.py
legal_document _review/server/: __init__.py  app.py
legal_document _review/tests/: test_graders.py
