[project]
name = "legal-document-review"
version = "1.0.0"
description = "A real-world OpenEnv environment for legal document review"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.1",
    "openai>=1.30.0",
    "python-dotenv",
    "requests",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
